MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/Gestion_Detalle__c.object-meta.xml
<CustomObject>
    <description>Detalle de campos relvantes por posicion de gestion</description>
    <label>Gestion Comercial Detalle</label>
    <nameField>
        <displayFormat>IG-{00000000}</displayFormat>
        <label>Item Gestion</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gestion Comercial Detalle</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>