MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/fields/Clave_GC_DET__c.field-meta.xml
<CustomField>
    <fullName>Clave_GC_DET__c</fullName>
    <formula>Gestion_Comercial__r.Name  &amp;&quot;-&quot;&amp;text(Posicion_No__c)</formula>
    <label>Clave GC-DET</label>
    <type>Text</type>
</CustomField>