MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <formula>Gestion_Comercial__r.Cliente__r.Name</formula>
    <label>Cliente</label>
    <type>Text</type>
</CustomField>