MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/fields/Col_Linea__c.field-meta.xml
<CustomField>
    <fullName>Col_Linea__c</fullName>
    <label>Col Linea</label>
    <length>20</length>
    <type>Text</type>
</CustomField>