MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/fields/Dias_para_vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Dias_para_vencimiento__c</fullName>
    <formula>Fecha_Vencimiento_Provision__c - today()</formula>
    <label>Dias para vencimiento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>