MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <formula>IF(
   OR(
     ISBLANK(PEP__c ),
     ISBLANK(Division__c ), 
     ISBLANK(Descripcion__c), 
     ISBLANK(Gestion_Comercial__c),
     ISBLANK(Materia__c ),
     ISBLANK(Posicion_PV__c ),
     ISBLANK(Pedido_Venta__c )
     ),&quot;INCOMPLETO&quot;,&quot;OK&quot;)</formula>
    <label>Estado</label>
    <type>Text</type>
</CustomField>