MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/fields/ESTADO_GENERAL__c.field-meta.xml
<CustomField>
    <fullName>ESTADO_GENERAL__c</fullName>
    <formula>IF( 
   OR(Marcado_para_Borrar__c = TRUE,  Estado__c =&quot;INCOMPLETO&quot;), &quot;NO PROCESABLE&quot;,&quot;LISTO&quot;)</formula>
    <label>ESTADO GENERAL</label>
    <type>Text</type>
</CustomField>