MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/fields/Estatus_Facturacion__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Facturacion__c</fullName>
    <formula>text(Gestion_Comercial__r.Estatus_Facturacion__c)</formula>
    <label>Estatus Facturacion</label>
    <type>Text</type>
</CustomField>