MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/fields/Fecha_Vencimiento_Provision__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vencimiento_Provision__c</fullName>
    <formula>Ingresado_a_Provision_el__c + 90</formula>
    <label>Fecha Vencimiento Provision</label>
    <type>Date</type>
</CustomField>