MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/fields/Gestion_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Gestion_Comercial__c</fullName>
    <label>Gestion Comercial</label>
    <referenceTo>Gestion_Comercial__c</referenceTo>
    <relationshipLabel>Gestion Comercial Detalle</relationshipLabel>
    <relationshipName>Gestion_Comercial_Detalle</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>