MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/fields/Ingresado_a_Provision__c.field-meta.xml
<CustomField>
    <fullName>Ingresado_a_Provision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ingresado a Provision</label>
    <type>Checkbox</type>
</CustomField>