MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/fields/Ingresado_a_Provision_el__c.field-meta.xml
<CustomField>
    <fullName>Ingresado_a_Provision_el__c</fullName>
    <label>Ingresado a Provision el</label>
    <type>Date</type>
</CustomField>