MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/fields/key__c.field-meta.xml
<CustomField>
    <fullName>key__c</fullName>
    <externalId>true</externalId>
    <label>Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>