MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/fields/Marcado_para_Borrar__c.field-meta.xml
<CustomField>
    <fullName>Marcado_para_Borrar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marcado para Borrar</label>
    <type>Checkbox</type>
</CustomField>