MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/fields/Materia__c.field-meta.xml
<CustomField>
    <fullName>Materia__c</fullName>
    <label>Materia</label>
    <length>20</length>
    <type>Text</type>
</CustomField>