MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/fields/Moneda__c.field-meta.xml
<CustomField>
    <fullName>Moneda__c</fullName>
    <formula>TEXT(Gestion_Comercial__r.Moneda__c)</formula>
    <label>Moneda</label>
    <type>Text</type>
</CustomField>