MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/fields/Pedido_Venta__c.field-meta.xml
<CustomField>
    <fullName>Pedido_Venta__c</fullName>
    <label>Pedido Venta</label>
    <length>10</length>
    <type>Text</type>
</CustomField>