MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/fields/PEP__c.field-meta.xml
<CustomField>
    <fullName>PEP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PEP</label>
    <referenceTo>PEP__c</referenceTo>
    <relationshipLabel>Gestion Comercial Detalle</relationshipLabel>
    <relationshipName>Gestion_Comercial_Detalle</relationshipName>
    <type>Lookup</type>
</CustomField>