MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/fields/PEPName__c.field-meta.xml
<CustomField>
    <fullName>PEPName__c</fullName>
    <formula>PEP__r.Name</formula>
    <label>PEP</label>
    <type>Text</type>
</CustomField>