MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/fields/Periodo__c.field-meta.xml
<CustomField>
    <fullName>Periodo__c</fullName>
    <formula>Gestion_Comercial__r.PeriodoM__c</formula>
    <label>Periodo</label>
    <type>Text</type>
</CustomField>