MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/fields/Periodo_de_Provision__c.field-meta.xml
<CustomField>
    <fullName>Periodo_de_Provision__c</fullName>
    <formula>CASE(
MONTH(  Ingresado_a_Provision_el__c   ),
1, &quot;Ene.&quot;,
2, &quot;Feb.&quot;,
3, &quot;Mar.&quot;,
4, &quot;Abr.&quot;,
5, &quot;May.&quot;,
6, &quot;Jun.&quot;,
7, &quot;Jul.&quot;,
8, &quot;Ago.&quot;,
9, &quot;Sep.&quot;,
10, &quot;Oct.&quot;,
11, &quot;Nov.&quot;,
12, &quot;Dic.&quot;,
&quot;&quot;
) + TEXT(YEAR(  Ingresado_a_Provision_el__c ))</formula>
    <label>Periodo de Provision</label>
    <type>Text</type>
</CustomField>