MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/fields/Posicion_No__c.field-meta.xml
<CustomField>
    <fullName>Posicion_No__c</fullName>
    <label>Pos. No.</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>