MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/fields/Posicion_PV__c.field-meta.xml
<CustomField>
    <fullName>Posicion_PV__c</fullName>
    <label>Pos. PV</label>
    <length>4</length>
    <type>Text</type>
</CustomField>