MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/fields/Provision_Reversada__c.field-meta.xml
<CustomField>
    <fullName>Provision_Reversada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provision Reversada</label>
    <type>Checkbox</type>
</CustomField>