MigracionObjeto/force-app/main/default/objects/Gestion_Detalle__c/fields/Provision_reversada_el__c.field-meta.xml
<CustomField>
    <fullName>Provision_reversada_el__c</fullName>
    <label>Provision reversada el</label>
    <type>Date</type>
</CustomField>